tests/miniJava/pos/000974_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 [ 0 ] ) if ( 0 ) { } else { } else while ( 0 ) { } } }
