tests/miniJava/neg/006745_mutation.MiniJava
class java { static public static void Main ( String [ ] java ) { { } } }
